--- a/app/views/prototypes/new-start/answers-provider.html
+++ b/app/views/prototypes/new-start/answers-provider.html
@@ -26,15 +26,15 @@
 
 
 
-        <h2 class="govuk-heading-m">Teacher vacancies</h2>
+        <h2 class="govuk-heading-m">Vacancies</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-4">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Yes 
+              How many 
             </dt>
             <dd class="govuk-summary-list__value">
-              3
+              1 - 5
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="one-revisit">
@@ -50,10 +50,10 @@
         <dl class="govuk-summary-list govuk-!-margin-bottom-4">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-             Easy or difficult
+             Time to fill
             </dt>
             <dd class="govuk-summary-list__value">
-              Easy
+              2 - 3 months
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="posts-revisit">
@@ -63,50 +63,26 @@
           </div>
         </dl>
 
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+             Types
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Academic teaching
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="posts-revisit">
+                Change<span class="govuk-visually-hidden"> name</span>
+              </a>
+            </dd>
+          </div>
+        </dl>
+
+
+
+
         <br><br>
-
-        
-
-
-        <h2 class="govuk-heading-m">Salary spend</h2>
-
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Total spend
-            </dt>
-            <dd class="govuk-summary-list__value">
-              £360000
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="staff-revisit">
-                Change<span class="govuk-visually-hidden"> name</span>
-              </a>
-            </dd>
-          </div>
-          
-        </dl>
-
-         
-
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-             Percentage of total
-            </dt>
-            <dd class="govuk-summary-list__value">
-              80%
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="percentage">
-                Change<span class="govuk-visually-hidden"> name</span>
-              </a>
-            </dd>
-          </div>
-
-        </dl>
-
-        <br>
         
         <form action="/form-handler" method="post" novalidate>
 
