--- a/app/views/prototypes/new-start/one.html
+++ b/app/views/prototypes/new-start/one.html
@@ -20,34 +20,59 @@
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
 
-            <h1 class="govuk-heading-xl">
-  How many vacant teaching posts have you had over the last year?
-</h1>
+            
 
   <div class="govuk-form-group">
+  <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+      <h1 class="govuk-fieldset__heading">
+        How many teaching vacancies did you have this year?
+      </h1>
+    </legend><br>
+    <div class="govuk-radios">
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+          None
+        </label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+          1 - 5
+        </label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+          6 - 10
+        </label>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
+          More than 10
+        </label>
+      </div>
 
-    <p class="govuk-body">
-  Include vacancies filled by agency staff
-</p>
-  
-    <div class="govuk-form-group">
-    <label class="govuk-label" for="address-postcode">
-      Add the number of posts
-    </label>
-    <input class="govuk-input govuk-input--width-10" id="address-postcode" name="address-postcode" type="text">
-  </div>
-
-</div><br><br>
-
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+       Don't know
+        </label>
+      </div>
+    </div>
+  </fieldset>
+</div><br>
 
       
 
 
-</fieldset>
+
 
 
           <a href="posts" class="govuk-button show-continue" style="display: inline;">
-      Save and continue
+      Continue
     </a>
        
  </div>
