--- a/app/views/prototypes/new-start/posts.html
+++ b/app/views/prototypes/new-start/posts.html
@@ -31,32 +31,32 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Have you found it easy or difficult to recruit staff?
+        What was the average length of time it took to fill these vacancies?
       </h1>
-    </legend>
+    </legend><br>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Easy
+          1 month or less
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Neither easy or difficult
+          2 - 3 months
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          Difficult
+          4 - 5 months
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
-          Varies too much between vacancies
+          6 months or more
         </label>
       </div>
 
@@ -68,13 +68,13 @@
       </div>
     </div>
   </fieldset>
-</div>
+</div><br>
 
 
 
 
-          <a href="staff" class="govuk-button show-continue" style="display: inline;">
-      Save and continue
+          <a href="types" class="govuk-button show-continue" style="display: inline;">
+      Continue
     </a>
        
  </div>
