--- a/app/views/prototypes/new-start/choose.html
+++ b/app/views/prototypes/new-start/choose.html
@@ -64,7 +64,7 @@
 
 
           <a href="mis" class="govuk-button show-continue" style="display: inline;">
-      Save and continue
+      Continue
     </a>
        
       </div>
