--- a/app/views/prototypes/new-start/upload.html
+++ b/app/views/prototypes/new-start/upload.html
@@ -46,7 +46,7 @@
 
 
           <a href="staff-more" class="govuk-button show-continue" style="display: inline;">
-      Save and continue
+      Continue
     </a>
        
       </div>
