--- a/app/views/prototypes/eves/percentage.html
+++ b/app/views/prototypes/eves/percentage.html
@@ -24,24 +24,15 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  What proportion of your funding was spent on staff salaries?
+  What was your staff spend as a percentage of your total income?
 </h1>
 
             
-<p class="govuk-body">
-  Enter the total amount for teaching and non-teaching staff for 2021/22
-</p>
+
 
 <div class="govuk-form-group">
   <label class="govuk-label" for="width-10">
-    Total spend on staff salaries in £'s
-  </label>
-  <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
-</div>
-
-<div class="govuk-form-group">
-  <label class="govuk-label" for="width-10">
-    Your staff spend as a percentage of your total income %
+    Enter this as a percentage of your total income
   </label>
   <input class="govuk-input govuk-input--width-10" id="width-10" name="width-10" type="text">
 </div>
@@ -49,8 +40,8 @@
 </fieldset><br><br>
 
 
-          <a href="one" class="govuk-button show-continue" style="display: inline;">
-      Continue
+          <a href="answers-provider" class="govuk-button show-continue" style="display: inline;">
+      Save and continue
     </a>
        
       </div>
