--- a/app/views/prototypes/eves/staff-revisit.html
+++ b/app/views/prototypes/eves/staff-revisit.html
@@ -24,13 +24,13 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  What proportion of your funding was spent on staff salaries?
+  How much of your income was spent on staff salaries?
 </h1>
 
             
-<p class="govuk-body">
-  Enter the total amount for teaching and non-teaching staff for 2021/22
-</p>
+<div class="govuk-inset-text">
+  Enter the total amount for teaching and non-teaching staff for 2020/21.
+</div>
 
 <div class="govuk-form-group">
   <label class="govuk-label" for="width-10">
@@ -49,8 +49,8 @@
 </fieldset><br><br>
 
 
-          <a href="one" class="govuk-button show-continue" style="display: inline;">
-      Continue
+          <a href="answers-provider" class="govuk-button show-continue" style="display: inline;">
+      Save and continue
     </a>
        
       </div>
