--- a/app/views/prototypes/eves/choose.html
+++ b/app/views/prototypes/eves/choose.html
@@ -11,78 +11,66 @@
 {% block content %}
 
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-      <a href="#" class="govuk-back-link">Back</a>
- 
+        <div class="govuk-width-container">
+  <a href="#" class="govuk-back-link">Back</a>
 
   <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
-  
+
+  <main class="govuk-main-wrapper " id="main-content" role="main">
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
         
-          
+          <div class="govuk-form-group">
 
+            <h1 class="govuk-heading-xl">
+  How many staff do you employ?
+</h1>
 
+            
+<p class="govuk-body">Include management, teaching and support staff.
+  Include tempoary staff but not agency workers. Include part-time staff.
+</p>
 
-    
-
-<div class="govuk-form-group">
+  <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
-    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-      <h1 class="govuk-fieldset__heading">
-        How easy or difficult as it to fill the vacancies?
-      </h1>
-    </legend>
+    
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Very easy
-        </label>
-      </div>
-
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Easy
+          Up to 20 people
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Neither easy or difficult
+          21 to 100 people
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          Difficult
+          101 + people
         </label>
       </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
-          Very difficult
-        </label>
-      </div>
-
       
     </div>
   </fieldset>
-</div><br>
+</div>
+
+</fieldset><br><br>
 
 
-
-
-          <a href="answers-provider" class="govuk-button show-continue" style="display: inline;">
-      Continue
+          <a href="mis" class="govuk-button show-continue" style="display: inline;">
+      Save and continue
     </a>
        
- </div>
+      </div>
+    </div>
+  </main>
 </div>
-        
-
 
 
 {% endblock %}
