--- a/app/views/prototypes/eves/leadership.html
+++ b/app/views/prototypes/eves/leadership.html
@@ -20,62 +20,56 @@
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
   
-        
-          
 
+      
 
-
-    
 
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How easy or difficult as it to fill the vacancies?
+        How many senior leadership vacancies did you have over the past academic year?
       </h1>
-    </legend>
+    </legend><br>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Very easy
-        </label>
-      </div>
-
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Easy
+          None
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Neither easy or difficult
+          1 - 5
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          Difficult
+          6 - 10
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
-          Very difficult
+          More than 10
+        </label>
+
+        
+    </div>
+
+    <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
+          Don't know
         </label>
       </div>
-
-      
-    </div>
   </fieldset>
 </div><br>
 
 
-
-
-          <a href="answers-provider" class="govuk-button show-continue" style="display: inline;">
+          <a href="teacher" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
