--- a/app/views/prototypes/eves/posts.html
+++ b/app/views/prototypes/eves/posts.html
@@ -19,21 +19,15 @@
   <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
 
-  
-        
-          
-
-
-
     
 
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        How easy or difficult as it to fill the vacancies?
+        How easy or difficult was it to fill the vacancies?
       </h1>
-    </legend>
+    </legend><br>
     <div class="govuk-radios">
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
