--- a/app/views/prototypes/eves/answers-provider.html
+++ b/app/views/prototypes/eves/answers-provider.html
@@ -64,7 +64,7 @@
 
         <br><br>
 
-        <h2 class="govuk-heading-m">Teacher vacancies</h2>
+        <h2 class="govuk-heading-m">Leadership vacancies</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-4">
           <div class="govuk-summary-list__row">
@@ -72,7 +72,7 @@
               Yes 
             </dt>
             <dd class="govuk-summary-list__value">
-              3
+              1 - 5
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="one-revisit">
@@ -92,6 +92,84 @@
             </dt>
             <dd class="govuk-summary-list__value">
               Easy
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="posts-revisit">
+                Change<span class="govuk-visually-hidden"> name</span>
+              </a>
+            </dd>
+          </div>
+        </dl>
+
+        <br><br>
+
+        <h2 class="govuk-heading-m">Teaching vacancies</h2>
+
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Yes 
+            </dt>
+            <dd class="govuk-summary-list__value">
+              More than 10
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="one-revisit">
+                Change<span class="govuk-visually-hidden"> name</span>
+              </a>
+            </dd>
+          </div>
+          
+        </dl>
+
+         
+
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+            Difficulty
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Easy
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="posts-revisit">
+                Change<span class="govuk-visually-hidden"> name</span>
+              </a>
+            </dd>
+          </div>
+        </dl>
+
+        <br><br>
+
+        <h2 class="govuk-heading-m">Time to fill vacancies</h2>
+
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Yes 
+            </dt>
+            <dd class="govuk-summary-list__value">
+              6 months or more
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="one-revisit">
+                Change<span class="govuk-visually-hidden"> name</span>
+              </a>
+            </dd>
+          </div>
+          
+        </dl>
+
+         
+
+        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+            Difficulty
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Difficult
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="posts-revisit">
