--- a/app/views/prototypes/eves/answers-provider.html
+++ b/app/views/prototypes/eves/answers-provider.html
@@ -4,29 +4,38 @@
   GOV.UK prototype kit
 {% endblock %}
 {% block beforeContent %}
-  
+  <div class="govuk-phase-banner">
+  <p class="govuk-phase-banner__content">
+    <strong class="govuk-tag govuk-phase-banner__content__tag">
+      prototype
+    </strong>
+    <span class="govuk-phase-banner__text">
+      This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.
+    </span>
+  </p>
+</div>
 
 {% endblock %}
 
 {% block content %}
 
 
-        <div class="govuk-width-container">
-  <a href="#" class="govuk-back-link">Back</a>
-
+        
   <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>     
 
-  <main class="govuk-main-wrapper " id="main-content" role="main">
+  
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds-from-desktop">
 
         <h1 class="govuk-heading-xl">Check your answers</h1>
 
+        <h2 class="govuk-heading-m">Salary spend</h2>
+        
 
-    <h2 class="govuk-heading-m">Salary spend</h2>
+       
+        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Total spend
@@ -35,163 +44,276 @@
               £360000
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="staff-revisit">
-                Change<span class="govuk-visually-hidden"> name</span>
+              <a class="govuk-link" href="#">
+                Change
+                <span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
           </div>
-          
-        </dl>
 
-         
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-             Percentage of total
+              Percentage of total
             </dt>
             <dd class="govuk-summary-list__value">
-              80%
+              <p class="govuk-body">80%</p>
             </dd>
+
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="percentage">
-                Change<span class="govuk-visually-hidden"> name</span>
+              <a class="govuk-link" href="#">Change
+                <span class="govuk-visually-hidden"> contact details</span>
               </a>
             </dd>
           </div>
 
+
         </dl>
 
-        <br><br>
 
-        <h2 class="govuk-heading-m">Leadership vacancies</h2>
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
-          <div class="govuk-summary-list__row">
+
+
+
+        <h2 class="govuk-heading-m">Vacancies</h2>
+
+        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+           
+
+
+        
+           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Yes 
-            </dt>
-            <dd class="govuk-summary-list__value">
-              1 - 5
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="one-revisit">
-                Change<span class="govuk-visually-hidden"> name</span>
-              </a>
-            </dd>
-          </div>
-          
-        </dl>
-
-         
-
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-            Difficulty
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Easy
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="posts-revisit">
-                Change<span class="govuk-visually-hidden"> name</span>
-              </a>
-            </dd>
-          </div>
-        </dl>
-
-        <br><br>
-
-        <h2 class="govuk-heading-m">Teaching vacancies</h2>
-
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Yes 
+              Leadership
             </dt>
             <dd class="govuk-summary-list__value">
               More than 10
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="one-revisit">
-                Change<span class="govuk-visually-hidden"> name</span>
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
           </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Teaching
+            </dt>
+            <dd class="govuk-summary-list__value">
+              1 - 5
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Time to fill
+            </dt>
+            <dd class="govuk-summary-list__value">
+              1 - 5
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
           
+
+
         </dl>
 
-         
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-            Difficulty
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Easy
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="posts-revisit">
-                Change<span class="govuk-visually-hidden"> name</span>
-              </a>
-            </dd>
-          </div>
-        </dl>
-
-        <br><br>
-
-        <h2 class="govuk-heading-m">Time to fill vacancies</h2>
-
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Yes 
-            </dt>
-            <dd class="govuk-summary-list__value">
-              6 months or more
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="one-revisit">
-                Change<span class="govuk-visually-hidden"> name</span>
-              </a>
-            </dd>
-          </div>
-          
-        </dl>
-
-         
-
-        <dl class="govuk-summary-list govuk-!-margin-bottom-4">
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-            Difficulty
-            </dt>
-            <dd class="govuk-summary-list__value">
-              Difficult
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="posts-revisit">
-                Change<span class="govuk-visually-hidden"> name</span>
-              </a>
-            </dd>
-          </div>
-        </dl>
-
-        <br><br>
 
         
 
 
-    
-        
+       <!-- <h2 class="govuk-heading-m">Application owner</h2>
+
+        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Name
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Romeo Bridger
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"></span>
+              </a>
+            </dd>
+          </div>
+
+          
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Phone number
+            </dt>
+            <dd class="govuk-summary-list__value">
+              0789 009 8800
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                <span class="govuk-visually-hidden"></span>
+              </a>
+            </dd>
+          </div>
+
+          
+          
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Email
+            </dt>
+            <dd class="govuk-summary-list__value">
+              rbridger@elatt.co.uk
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                <span class="govuk-visually-hidden"> </span>
+              </a>
+            </dd>
+          </div>
+
+          
+
+        </dl>
+
+
+
+        <h2 class="govuk-heading-m">Super user</h2>
+
+        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Name
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Romeo Bridger
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"></span>
+              </a>
+            </dd>
+          </div>
+
+          
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Phone number
+            </dt>
+            <dd class="govuk-summary-list__value">
+              0789 997 6604
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                <span class="govuk-visually-hidden"></span>
+              </a>
+            </dd>
+          </div>
+
+          
+          
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Email
+            </dt>
+            <dd class="govuk-summary-list__value">
+              rbridger@elatt.co.uk
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                <span class="govuk-visually-hidden"> </span>
+              </a>
+            </dd>
+          </div>
+
+          
+
+
+
+        </dl>
+
+
+        <h2 class="govuk-heading-m">Agreement signatory</h2>
+
+        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Name
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Jane Smith
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"></span>
+              </a>
+            </dd>
+          </div>
+
+          
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Phone number
+            </dt>
+            <dd class="govuk-summary-list__value">
+              0789 997 6604
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                <span class="govuk-visually-hidden"></span>
+              </a>
+            </dd>
+          </div>
+
+          
+          
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Email
+            </dt>
+            <dd class="govuk-summary-list__value">
+              jsmith@elatt.co.uk
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                <span class="govuk-visually-hidden"> </span>
+              </a>
+            </dd>
+          </div>
+
+          
+
+          
+
+        </dl>-->
+
+
+
+<h2 class="govuk-heading-m govuk-!-font-size-27">Check and submit</h2>
+
+        <p class="govuk-body">By submitting this application you are confirming that, to the best of your knowledge, the details you are providing are correct.</p><br>
+
         <form action="/form-handler" method="post" novalidate>
 
           <input type="hidden" name="answers-checked" value="true">
 
-          <a href="start-staff" class="govuk-button show-continue" style="display: inline;">
-      Submit
+          <a href="confirmation" class="govuk-button show-continue" style="display: inline;">
+      Submit your provider information
     </a>
 
         </form>
