--- a/app/views/prototypes/eves/start-staff.html
+++ b/app/views/prototypes/eves/start-staff.html
@@ -23,7 +23,7 @@
         <h1 class="govuk-heading-xl">FE staff collection<br>
         <span class="govuk-caption-xl">August 2021 to September 2022</span></h1>
 
-        <p class="govuk-body">As stated in the funding rules you must tell us about the staff you employ.</p>
+        <p class="govuk-body">As stated in the funding rules you must tell us about the staff you employ.<br>You need to complete two parts. </p>
 
         <nav role="navigation">
   <ul class="browse-list">
