--- a/app/views/prototypes/eves/answers-provider.html
+++ b/app/views/prototypes/eves/answers-provider.html
@@ -124,6 +124,20 @@
             </dd>
           </div>
 
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Difficult types
+            </dt>
+            <dd class="govuk-summary-list__value">
+             Academic teaching
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
           
 
 
