--- a/app/views/prototypes/eves/posts.html
+++ b/app/views/prototypes/eves/posts.html
@@ -69,7 +69,7 @@
 
 
 
-          <a href="answers-provider" class="govuk-button show-continue" style="display: inline;">
+          <a href="what-type" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
