--- a/app/views/prototypes/eves/subjects.html
+++ b/app/views/prototypes/eves/subjects.html
@@ -18,20 +18,13 @@
 
   <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>
-
-  
-        
-          
-
-
-
     
 
 <div class="govuk-form-group">
   <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
       <h1 class="govuk-fieldset__heading">
-        What type of vacancies were difficult to fill?
+        Which subjects were difficult to find teacher support staff for?
       </h1>
     </legend>
     <span id="waste-hint" class="govuk-hint">
@@ -41,19 +34,19 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Academic teaching
+          English
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
         <label class="govuk-label govuk-checkboxes__label" for="waste-2">
-          Vocational teaching
+          Maths
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
         <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-          Other teaching
+          Art and design
         </label>
       </div>
 
@@ -61,19 +54,19 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Academic teaching support staff
+          Biology
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
         <label class="govuk-label govuk-checkboxes__label" for="waste-2">
-          Vocational teaching support staff
+          Business studies
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
         <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-          Other teaching support staff
+          Chemistry
         </label>
       </div>
 
@@ -81,22 +74,65 @@
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
         <label class="govuk-label govuk-checkboxes__label" for="waste">
-          Management
+          Design and technology
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
         <label class="govuk-label govuk-checkboxes__label" for="waste-2">
-          Governor board
+          Drama
         </label>
       </div>
       <div class="govuk-checkboxes__item">
         <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
         <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-          Other support staff
+          Economics
+        </label>
+      </div>
+
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
+        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
+          French
+        </label>
+      </div>
+
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
+        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
+          Geography
+        </label>
+      </div>
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
+        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
+          Germann
+        </label>
+      </div>
+
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
+        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
+          History
+        </label>
+      </div>
+
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
+        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
+          Law
+        </label>
+      </div>
+
+      <div class="govuk-checkboxes__item">
+        <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
+        <label class="govuk-label govuk-checkboxes__label" for="waste-3">
+          Media studies
         </label>
       </div>
     </div>
+
+
 
 
 
@@ -107,7 +143,7 @@
 
 
 
-          <a href="subjects" class="govuk-button show-continue" style="display: inline;">
+          <a href="answers-provider" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
