--- a/app/views/prototypes/eves/answers-provider.html
+++ b/app/views/prototypes/eves/answers-provider.html
@@ -115,7 +115,7 @@
               Time to fill
             </dt>
             <dd class="govuk-summary-list__value">
-              1 - 5
+              Don't know
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -130,6 +130,34 @@
             </dt>
             <dd class="govuk-summary-list__value">
              Academic teaching
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Difficult academic
+            </dt>
+            <dd class="govuk-summary-list__value">
+             History, Spanish
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> address</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Difficult vocational
+            </dt>
+            <dd class="govuk-summary-list__value">
+             Construction
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
