Peters staff flow

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -70,6 +70,9 @@
       <p>Eve's provider questions - <a href="/prototypes/eves/details">Start</a>
       </p><br>
 
+      <p>Peter's staff questions - <a href="/prototypes/peters-staff/start-staff">Start</a>
+      </p><br>
+
       <br><br>
 
 
