--- a/app/views/prototypes/peters-staff/start-staff.html
+++ b/app/views/prototypes/peters-staff/start-staff.html
@@ -29,7 +29,7 @@
   <ul class="browse-list">
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="#">About my organisation</a>
+        <a class="browse-list-item-link" href="staff">About my organisation</a>
         
         
       </li>
@@ -47,13 +47,9 @@
 </nav>
 
 
-
-
         
 
-       <a href="mis" class="govuk-button show-continue" style="display: inline;">
-      Continue
-    </a>
+       
       
         
 
