Peters staff flow

--- a/app/views/prototypes/peters-staff/mis.html
+++ b/app/views/prototypes/peters-staff/mis.html
@@ -28,32 +28,31 @@
  How do you want to tell us about your staff?
 </h1>
 
-            
-
 
   <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
     
     <div class="govuk-radios">
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+        <input class="govuk-radios__input" id="radio-1" name="where-do-you-live" type="radio" value="add-staff">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Add your staff members individually - here online
+          Add each members details into an online form
         </label>
       </div><br>
 
       <h2 class="govuk-heading-m">Or</h2>
+     
 
-
-          
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
+        <input class="govuk-radios__input" id="radio-3" name="#" type="radio" value="#">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Upload a file with staff details from your own system
+          Upload a file
         </label>
       </div>
 
-      
+      <!--<div class="govuk-inset-text">
+  You can add their names and email address or upload a file with the information
+</div>-->
 
     </div>
 
@@ -64,7 +63,8 @@
 </fieldset><br><br>
 
 
-          <a href="add" class="govuk-button show-continue" style="display: inline;">
+
+            <a href="add" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
