--- a/app/views/prototypes/eves/mis.html
+++ b/app/views/prototypes/eves/mis.html
@@ -36,7 +36,7 @@
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="radio-1" name="where-do-you-live" type="radio" value="add-staff">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Enter all your staff details - on their behalf
+          Enter your staff details - on their behalf
         </label>
       </div><br><br>
 
