--- a/app/views/prototypes/peters-staff/add.html
+++ b/app/views/prototypes/peters-staff/add.html
@@ -90,14 +90,119 @@
         </div>
       </div>
     </div>
-  </fieldset>
-</div><br>
 
-</fieldset><br><br>
+    
+  
+</div>
+
+</fieldset><br>
+
+<h2 class="govuk-heading-m">Gender</h2>
+
+<fieldset class="govuk-fieldset">
+   
+    <div class="govuk-radios">
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
+          Male
+        </label>
+        <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
+          
+        </span>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-2" name="ethnic-group" type="radio" value="black-african-black-british-or-caribbean" aria-describedby="ethnic-group-2-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-2">
+          Female
+        </label>
+        <span id="ethnic-group-2-item-hint" class="govuk-hint govuk-radios__hint">
+          
+        </span>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-3" name="ethnic-group" type="radio" value="mixed-or-multiple-ethnic-groups" aria-describedby="ethnic-group-3-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-3">
+          Other
+        </label>
+        <span id="ethnic-group-3-item-hint" class="govuk-hint govuk-radios__hint">
+          
+        </span>
+      </div>
+      
+      
+      <div class="govuk-radios__divider">or</div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-7" name="ethnic-group" type="radio" value="prefer-not-to-say">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-7">
+          Prefer not to say
+        </label>
+      </div>
+    </div>
+  </fieldset><br><br>
+  <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+      <h2 class="govuk-heading-m">Ethnicity</h2>
+    </legend>
+    <div class="govuk-radios">
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group" name="ethnic-group" type="radio" value="asian-or-asian-british" aria-describedby="ethnic-group-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group">
+          Asian or Asian British
+        </label>
+        <span id="ethnic-group-item-hint" class="govuk-hint govuk-radios__hint">
+          Includes any Asian background, for example, Bangladeshi, Chinese, Indian, Pakistani
+        </span>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-2" name="ethnic-group" type="radio" value="black-african-black-british-or-caribbean" aria-describedby="ethnic-group-2-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-2">
+          Black, African, Black British or Caribbean
+        </label>
+        <span id="ethnic-group-2-item-hint" class="govuk-hint govuk-radios__hint">
+          Includes any Black background
+        </span>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-3" name="ethnic-group" type="radio" value="mixed-or-multiple-ethnic-groups" aria-describedby="ethnic-group-3-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-3">
+          Mixed or multiple ethnic groups
+        </label>
+        <span id="ethnic-group-3-item-hint" class="govuk-hint govuk-radios__hint">
+          Includes any Mixed background
+        </span>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-4" name="ethnic-group" type="radio" value="white" aria-describedby="ethnic-group-4-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-4">
+          White
+        </label>
+        <span id="ethnic-group-4-item-hint" class="govuk-hint govuk-radios__hint">
+          Includes any White background
+        </span>
+      </div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-5" name="ethnic-group" type="radio" value="another-ethnic-group" aria-describedby="ethnic-group-5-item-hint">
+        <label class="govuk-label govuk-radios__label govuk-label--s" for="ethnic-group-5">
+          Another ethnic group
+        </label>
+        <span id="ethnic-group-5-item-hint" class="govuk-hint govuk-radios__hint">
+          Includes any other ethnic group, for example, Arab
+        </span>
+      </div>
+      <div class="govuk-radios__divider">or</div>
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="ethnic-group-7" name="ethnic-group" type="radio" value="prefer-not-to-say">
+        <label class="govuk-label govuk-radios__label govuk-label" for="ethnic-group-7">
+          Prefer not to say
+        </label>
+      </div>
+    </div>
+  </fieldset><br><br>
 
 
-          <a href="ethnicity" class="govuk-button show-continue" style="display: inline;">
-      Continue
+          <a href="staff-more" class="govuk-button show-continue" style="display: inline;">
+      Save and continue
     </a>
        
       </div>
