--- a/app/views/prototypes/peters-staff/choose.html
+++ b/app/views/prototypes/peters-staff/choose.html
@@ -31,7 +31,7 @@
 <p>
   Include roles filled with tempoary staff but not agency workers.<br>
   Include part-time staff.
-</p>
+</div>
 
   <div class="govuk-form-group">
   <fieldset class="govuk-fieldset">
@@ -64,7 +64,7 @@
 
 
           <a href="mis" class="govuk-button show-continue" style="display: inline;">
-      Save and continue
+      Continue
     </a>
        
       </div>
