Peters staff flow

--- a/app/views/prototypes/peters-staff/answers-staff.html
+++ b/app/views/prototypes/peters-staff/answers-staff.html
@@ -16,15 +16,15 @@
       <a href="#" class="govuk-back-link">Back</a>
  
 
-  <h1 class="govuk-heading-m">John Vincent Adams
-  <span class="govuk-caption-m">Impact Training Limited</span></h1><br>
+  
+  <span class="govuk-caption-m">Impact Training Limited</span><br>
 
         
         
-        <h1 class="govuk-heading-xl">Check your answers</h1>
+        <h1 class="govuk-heading-xl">John Vincent Adams</h1>
 
         
-<h2 class="govuk-heading-m">About you</h2>
+
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
@@ -34,8 +34,8 @@
               10.01.1992
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="one">
-                <span class="govuk-visually-hidden"> name</span>
+              <a class="govuk-link" href="gender2">
+                Change<span class="govuk-visually-hidden"></span>
               </a>
             </dd>
 
@@ -62,7 +62,7 @@
               Ethnicity
             </dt>
             <dd class="govuk-summary-list__value">
-              Asian or Asian British
+              White
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="ethnicity2">
@@ -283,7 +283,7 @@
 
 
          <a href="hello" class="govuk-button show-continue" style="display: inline;">
-      Save and continue
+      Back
     </a>
        
       </div>
