--- a/app/views/prototypes/peters-staff/hello.html
+++ b/app/views/prototypes/peters-staff/hello.html
@@ -26,10 +26,10 @@
   <ul class="browse-list">
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="gender">About you</a>
+        <a class="browse-list-item-link" href="answers-staff">Personal</a>
         
           <p class="browse-list-item-body">
-            Personal information about you
+            Personal information 
           </p>
         
         
@@ -41,7 +41,7 @@
       </li>
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="#nope">Your time in further education</a>
+        <a class="browse-list-item-link" href="#nope">Time in further education</a>
         
         
           <p class="browse-list-item-subtext">
@@ -52,7 +52,7 @@
       </li>
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="#nope">Your qualifications</a>
+        <a class="browse-list-item-link" href="#nope">Qualifications</a>
 
         <p class="browse-list-item-subtext">
             Lorem ipsum dolor sit amet<a href="#"></a>
@@ -95,7 +95,7 @@
   <ul class="browse-list">
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="#">The subjects you teach</a>
+        <a class="browse-list-item-link" href="#">Subjects taught</a>
 
         <p class="browse-list-item-subtext">
             Lorem ipsum dolor sit amet<a href="#"></a>
@@ -114,7 +114,7 @@
       </li>
     
       <li class="browse-list-item">
-        <a class="browse-list-item-link" href="#nope">Your contract</a>
+        <a class="browse-list-item-link" href="#nope">Contract</a>
         
         
           <p class="browse-list-item-subtext">
