Peters staff flow

--- a/app/views/prototypes/peters-staff/staff-one.html
+++ b/app/views/prototypes/peters-staff/staff-one.html
@@ -58,7 +58,7 @@
  
   
 </div>
-<p class="govuk-table__cell--numeric"><a class="#" href="add-two">Add another staff member</a> </p><br>
+<p class="govuk-table__cell--numeric"><a class="#" href="add-two">Add another member of staff</a> </p><br>
 
 
           <a href="confirmation" class="govuk-button show-continue" >
