--- a/app/views/prototypes/peters-staff/staff-two.html
+++ b/app/views/prototypes/peters-staff/staff-two.html
@@ -85,7 +85,7 @@
   
  
 </div>
-<p class="govuk-table__cell--numeric"><a class="#" href="#">Add more staff</a> </p><br>
+<p class="govuk-table__cell--numeric"><a class="#" href="#">Add another member of staff</a> </p><br>
 
 
           <a href="confirmation" class="govuk-button show-continue" >
