Peters staff flow

--- a/app/views/prototypes/peters-staff/contract.html
+++ b/app/views/prototypes/peters-staff/contract.html
@@ -14,7 +14,7 @@
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
 
-  <h1 class="govuk-heading-m">John Vincent Adams
+  <h1 class="govuk-heading-m">Impact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>     
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
@@ -30,35 +30,40 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Job title
+        Main type of contract?
       </h1>
     </legend>
-    <p>
-  Which title describes your role?
-</p>
+    
     <div class="govuk-radios">
+
+       <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+          Permanent 
+        </label>
+      </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Teacher
+          Fixed term or temporary
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Senior leader
+          Zero, minimal or flexible hours
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          Support
+          Through an agency
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
-          Other
+          Self-employed, freelance
         </label>
       </div>
     </div>
@@ -68,7 +73,7 @@
 <br><br>
 
 
-          <a href="how-long-role" class="govuk-button show-continue" style="display: inline;">
+          <a href="paid" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
