--- a/app/views/prototypes/peters-staff/staff-one.html
+++ b/app/views/prototypes/peters-staff/staff-one.html
@@ -24,7 +24,7 @@
           <div class="govuk-form-group">
 
             <h1 class="govuk-heading-xl">
-  You have added 1 staff member
+  Your staff
 </h1>
 
 
@@ -33,7 +33,7 @@
   <div class="govuk-accordion__section ">
     <div class="govuk-accordion__section-header">
       <h2 class="govuk-accordion__section-heading">
-        <span class="govuk-accordion__section" id="accordion-with-summary-sections-heading-1"><a href="staff-more">
+        <span class="govuk-accordion__section" id="accordion-with-summary-sections-heading-1"><a href="john">
     
           John Vincent Adams</a>
         </span>
