--- a/app/views/prototypes/peters-staff/how-long-org.html
+++ b/app/views/prototypes/peters-staff/how-long-org.html
@@ -30,35 +30,40 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Job title
+        How long with this organisation?
       </h1>
     </legend>
-    <p>
-  Which title describes your role?
-</p>
+    
     <div class="govuk-radios">
+
+       <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+          Less than one year
+        </label>
+      </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Teacher
+          One year or more
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Senior leader
+          Three years or more
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          Support
+          10 years or more
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
-          Other
+          More than 20 years
         </label>
       </div>
     </div>
@@ -68,7 +73,7 @@
 <br><br>
 
 
-          <a href="how-long-role" class="govuk-button show-continue" style="display: inline;">
+          <a href="how-long-education" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
