--- a/app/views/prototypes/peters-staff/paid.html
+++ b/app/views/prototypes/peters-staff/paid.html
@@ -13,8 +13,7 @@
 
         <div class="govuk-width-container">
   <a href="#" class="govuk-back-link">Back</a>
-
-  <h1 class="govuk-heading-m">John Vincent Adams
+John Vincent AdamsImpact Training Limited
   <span class="govuk-caption-m">UKPRN: 00012345</span></h1>     
 
   <main class="govuk-main-wrapper " id="main-content" role="main">
@@ -30,37 +29,27 @@
   <fieldset class="govuk-fieldset">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
       <h1 class="govuk-fieldset__heading">
-        Job title
+        Are they paid weekly or monthly?
       </h1>
     </legend>
-    <p>
-  Which title describes your role?
-</p>
+    
     <div class="govuk-radios">
+
+       <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
+        <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+          Weekly
+        </label>
+      </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="where-do-you-live" name="where-do-you-live" type="radio" value="england">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-          Teacher
+          Monthly
         </label>
       </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-2" name="where-do-you-live" type="radio" value="scotland">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          Senior leader
-        </label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-3" name="where-do-you-live" type="radio" value="wales">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-3">
-          Support
-        </label>
-      </div>
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="where-do-you-live-4" name="where-do-you-live" type="radio" value="northern-ireland">
-        <label class="govuk-label govuk-radios__label" for="where-do-you-live-4">
-          Other
-        </label>
-      </div>
+      
+      
+      
     </div>
   </fieldset>
 </div>
@@ -68,7 +57,7 @@
 <br><br>
 
 
-          <a href="how-long-role" class="govuk-button show-continue" style="display: inline;">
+          <a href="salary" class="govuk-button show-continue" style="display: inline;">
       Continue
     </a>
        
