--- a/app/views/prototypes/peters-staff/staff-two.html
+++ b/app/views/prototypes/peters-staff/staff-two.html
@@ -52,6 +52,11 @@
         <li>
           Qualifications: English and Maths
         </li>
+
+        <li><a class="#" href="hello">More</a>
+        
+        </li>
+        
       </ul>
     </div>
   </div>
@@ -77,6 +82,8 @@
         <li>
           Qualifications: English and Maths
         </li>
+
+        
         
         
       </ul>
